fix: bottom rhomb negative z-index

--- a/common/common.scss
+++ b/common/common.scss
@@ -27,6 +27,7 @@
 
   &::before {
     content: url($rhomb);
+    z-index: -1;
     position: absolute;
     bottom: calc(100% - 6px);
     left: 0;
@@ -36,7 +37,8 @@
   &::after {
     content: url($rhomb);
     position: absolute;
-    top: calc(100% - 6px);
+    z-index: -1;
+    top: calc(100% - 7px);
     left: 0;
     width: 100%;
     transform: scale(-100%);
